--- a/main.css
+++ b/main.css
@@ -1,3 +1,26 @@
 body{
-  background-color: blue;
+  display: flex;
+  flex-direction: column;
+}
+#card-holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* margin: auto; */
+}
+
+.card {
+    margin: 1%;
+    padding: 2%;
+    width: 400px;
+    border: 2px solid slategray;
+    text-align: center;
+}
+
+img{
+  max-width: 100%;
+}
+
+#output{
+  align-self: flex-end;
 }
