took code from event listener function for changing background and button color of a card on click and made a separate function called changeCardToGreen

--- a/main.css
+++ b/main.css
@@ -65,6 +65,15 @@ img{
   font-size: 20px;
   font-weight: bold;
 }
+/* background colors */
+.green{
+  background-color: rgb(146, 196, 146);
+}
+
+.gray{
+  background-color: rgb(185, 184, 184);
+}
+
 
 /* diary entry output */
 
