--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body{
 
 h1.main-heading{
   font-size: 55px;
-  padding-top: 4%;
+  padding-top: 2%;
   padding-bottom: 1%;
   text-align: center; 
 }
@@ -46,14 +46,16 @@ h3{
 }
 
 img{
-  max-width: 100%;
-  height: 600px;
+  max-width: 90%;
+  height: 500px;
   padding: 5%;
+  /* margin: auto; */
 }
 
 .input{
   margin: 5%;
   font-size: 20px;
+  width:90%;
 }
 
 .card-button {
