--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body{
 
 h1.main-heading{
   font-size: 55px;
-  padding-top: 4%;
+  padding-top: 2%;
   padding-bottom: 1%;
   text-align: center; 
 }
@@ -46,14 +46,14 @@ h3{
 }
 
 img{
-  max-width: 100%;
-  height: 600px;
+  height: 500px;
   padding: 5%;
 }
 
 .input{
   margin: 5%;
   font-size: 20px;
+  width: 90%;
 }
 
 .card-button {
@@ -71,7 +71,7 @@ img{
   background-color: rgb(146, 196, 146);
 }
 
-.gray{
+.grey{
   background-color: rgb(185, 184, 184);
 }
 
@@ -109,5 +109,6 @@ h2{
 .edit-textarea{
   font-size: 19px;
   background-color: rgb(217, 236, 248);
+  width: 100%;
 }
  
